--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nivo/bar": "^0.83.0",
     "@nivo/core": "^0.83.0",
     "@nivo/pie": "^0.83.0",
+    "@phosphor-icons/react": "^2.0.13",
     "@prisma/client": "^5.3.1",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
